@@ -21,7 +21,7 @@ from branch import Branch, ScratchBranch
 from osutils import format_date
 from tree import Tree
 from diff import diff_trees
-from trace import mutter, warning
+from trace import mutter, warning, open_tracefile
 import add
 
 BZRDIR = ".bzr"
